# QtOpenCV

./: .gitignore  CMakeLists.txt  cvmatandqimage.cpp
lib/: CMakeLists.txt
